--- a/типы данных ДЗ/index.html
+++ b/типы данных ДЗ/index.html
@@ -9,22 +9,70 @@
 </head>
 
 <body>
-    <input class="inp" type="text">
-    <p class="out">1</p>
-    <button class="plas">+</button>
-    <button class="min">-</button> 
-    
-    <!-- -------------------------------------- -->
+    <h2>Мінімум</h2>
+    <ol>
+        <li>
+            0,1+0,2=<span class="res1-1"></span>
+        </li>
+        <li>
+            '1'+2 =<span class="res1-2"></span>
+        </li>
+        <li>
+            <p>
+                Обсяг флешки <br> <input class="vol" type="text">
+            </p>
+            <div>
+                <button class="fileButton">check</button>
+            </div>
+            <p>
+                Кількість файлів, шт. <br> <span class="amount"></span>
+            </p>
+            <p>
+                Залишок, Mb <br> <span class="rem"></span>
+            </p>
+        </li>
+    </ol>
 
-    <div>
-        <input class="inp2" type="number" name="" id="">
-        <button class="btn2">inp</button>
-        <p class="res"></p>
-    </div>
+    <h2>Норма</h2>
+    <ol>
+        <li>
+            <p>
+                Грошей у гаманці, грн <br> <input class="hrn" type="text">
+            </p>
+            <div>
+                <button class="fileButton1">check</button>
+            </div>
+            <p>
+                Кількість шоколадок, шт. <br> <span class="choco"></span>
+            </p>
+            <p>
+                Залишок, грн <br> <span class="rem1"></span>
+            </p>
+        </li>
+    </ol>
 
+    <h2>
+        Максимум
+    </h2>
+    <ol>
+        <li>
+            <p>
+                Сумма вкладу, грн <input class="sum" type="text">
+            </p>
+            <p>
+                Місяців <input class="month" type="text">
+            </p>
+            <div>
+                <button class="checkMoney">Money</button>
+            </div>
+            <p>
+                Сума нарахованих відсотків, грн <span class="sumPer"></span>
+            </p>
+        </li>
+    </ol>
 
     <script src="./index.js">
-    </script>    
+    </script>
 </body>
 
 </html>
