--- a/типы данных ДЗ/unit_02/unit_02.html
+++ b/типы данных ДЗ/unit_02/unit_02.html
@@ -78,7 +78,7 @@
             <p>По нажатию на кнопку .b-9 выполняется функция t9, которая выводит в div.out-9 то, что пользователь ввел в
                 input.i-9.</p>
             <p>Добавьте очистку input после нажатия кнопки. </p>
-            <input type="number" class="i-9">
+            <input type="number" id="text" class="i-9">
             <button class="button-primary b-9">Task-9</button>
             <div class="out-9"></div>
         </section>
