--- a/7 - array ДЗ/index.html
+++ b/7 - array ДЗ/index.html
@@ -67,15 +67,18 @@
                 <div class="serch">
                     <input class="cat-serch" type="text">
                     <button class="btn-serch">search</button>
-                    <div class="resSearch">--</div>
+                    <div class="res-search">--</div>
                 </div>
                 <div class="select">
                     <select class="cat-select" name="" id="">
                         <option value="Другая">Другая</option>
+                        <option value="Другая">Другая</option>
+                        <option value="Другая">Другая</option>
+                        <option value="Другая">Другая</option>
                         <option value="Скоттиш фолд">Скоттиш фолд</option>
                         <option value="Экзотическая короткошерстная">Экзотическая короткошерстная</option>
                     </select>
-                    <button class="btn-select">search</button>
+                    <button class="btn-select">select</button>
                 </div>
                 <div class="serch">
                     <button class="fromBottom">Від дешевих</button>
